po: update po/tr_TR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/admin.po
+++ b/po/tr_TR/admin.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 01:22+0000\n"
+"PO-Revision-Date: 2016-10-07 08:09+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -6608,7 +6608,7 @@ msgid ""
 "Changing the Prior Financial Period may result in problems calculating "
 "closing account balances accurately and / or exporting of financial "
 "transactions. Do you want to proceed?"
-msgstr ""
+msgstr "Önceki Mali Dönemi değiştirmek kapanış bakiyelerinin doğru hesaplanmasında ya da hesap hareketlerinin verilmesinde sorunlara yol açabilir. Devam etmek istediğinize emin misiniz?"
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -6687,7 +6687,7 @@ msgid ""
 "have privileges to create triggers and views (in MySQL 5.0 – and in MySQL "
 "5.1 if binary logging is enabled – this means the SUPER privilege). This "
 "install either does not seem to have the required privilege enabled."
-msgstr ""
+msgstr "Bu özelliği kullanabilmek için kullanılan veri tabanı kullanıcısının tetikleyici ve görünüm ekleme izninin bulunması gerekir (MySQL 5.0 ve MySQL 5.1 için binary günlükleme etkinleştirilmiş ise SUPER yetkisine karşılık gelir). Bu kurulum için gerekli izin etkinleştirilmemiş gibi görünüyor."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
