--- a/po/tr_TR/campaign.po
+++ b/po/tr_TR/campaign.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 07:46+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-08 04:08+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -121,7 +121,7 @@ msgstr "Kampanyanın Amaçları"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Goal Revenue"
-msgstr "Hedef Tutar"
+msgstr "Hedef Kazanç"
 
 #: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey ID"
@@ -185,7 +185,7 @@ msgstr "- üstü seçin -"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Revenue Goal"
-msgstr "Hedef Tutar"
+msgstr "Kazanç Hedefi"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Campaign has been deleted."
