po: update po/tr_TR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/member.po
+++ b/po/tr_TR/member.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 02:27+0000\n"
+"PO-Revision-Date: 2016-10-07 08:34+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -2292,7 +2292,7 @@ msgstr "Bu üyelik otomatik yenilenecek. Otomatik yenileme seçeneğini iptal et
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and In Progress"
-msgstr "Üyelik Otomatik Yenileniyor ve İşlem Sürüyor"
+msgstr "Üyelik Otomatik Yenileniyor ve Güncel"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Failed"
@@ -2316,7 +2316,7 @@ msgstr "Üyelik Durumu DeğiştirileMEZ"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew Subscription Status?"
-msgstr "Abonelik Durumunu Otomatik Yenile"
+msgstr "Otomatik Yenilenen Abonelik Durumu"
 
 #: CRM/Member/BAO/Query.php
 msgid "- None -"
@@ -2421,7 +2421,7 @@ msgstr "Üyelik belgesini yazdır/birleştir"
 msgid ""
 "Automatically email a membership confirmation and receipt to %1? OR if the "
 "payment is from a different contact, this email will only go to them."
-msgstr ""
+msgstr "Otomatik üyelik onayı ve alındı e-postası %1 adresine gönderilsin mi? YA DA ödeme formu başka bir kişi içinse bu e-posta yalnız onlara gider."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -2451,38 +2451,38 @@ msgstr "Tüm üyelikleri görüntülemek için hiç biri olarak seçin"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Auto-Renew Subscription Status"
-msgstr ""
+msgstr "Otomatik Yenileme Abonelik Durumu"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"None\" to display memberships that have never had an auto-renew "
 "subscription."
-msgstr ""
+msgstr "Asla otomatik yenilenen bir aboneliği olmaya üyeleri görüntülemek için \"Yok\" seçin."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"In Progress\" to display memberships with current auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Güncel otomatik yenilenen bir aboneliği olan üyeleri görüntülemek için \"Güncel\" seçin."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select \"Failed\" to display memberships with failed subscription payment."
-msgstr ""
+msgstr "İşlemi yapılamayan otomatik yenilenen bir aboneliği olan üyeleri görüntülemek için \"İşlem Yapılamadı\" seçin."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Cancelled\" to display memberships with cancelled auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "İptal edilmiş otomatik yenilenen bir aboneliği olan üyeleri görüntülemek için \"İptal\" seçin."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Ended\" to display memberships with an ended auto-renew "
 "subscription."
-msgstr ""
+msgstr "Sona ermiş otomatik yenilenen bir aboneliği olan üyeleri görüntülemek için \"Sona Ermiş\" seçin."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Any\" to display memberships with auto-renew subscription "
 "irrespective of their status."
-msgstr ""
+msgstr "Durumundan bağımsız olarak tüm otomatik yenilenen aboneliği olan üyeleri görüntülemek için \"Tümü\" seçin."
