--- a/po/tr_TR/common-base.po
+++ b/po/tr_TR/common-base.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-08 04:24+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18724,7 +18724,7 @@ msgid ""
 "There is no Financial Type configured of Account Relation Revenue. <a "
 "href='%1'>Click here</a> if you want to configure financial type for your "
 "site."
-msgstr "Hesap İlişkisi Karı için bir Mali Tür ayarlanmamış. Bir mali tür ayarlamak için <a href='%1'>buraya tıklayın</a>."
+msgstr "Hesap İlişkisi Kazancı için bir Mali Tür ayarlanmamış. Bir mali tür ayarlamak için <a href='%1'>buraya tıklayın</a>."
 
 #: templates/CRM/Price/Form/Field.tpl
 msgid ""
@@ -18811,7 +18811,7 @@ msgid ""
 "There are no financial types configured with a linked 'Revenue Account of' "
 "account. <a href='%1'>Click here</a> if you want to configure financial "
 "types for your site."
-msgstr "'Kar Hesabı' için bir Mali Tür ayarlanmamış. Bir mali tür ayarlamak için <a href='%1'>buraya tıklayın</a>."
+msgstr "'Kazanç Hesabı' için bir Mali Tür ayarlanmamış. Bir mali tür ayarlamak için <a href='%1'>buraya tıklayın</a>."
 
 #: templates/CRM/Price/Form/OptionFields.tpl
 msgid "Membership Options"
@@ -22369,7 +22369,7 @@ msgstr "Yükümlülük"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Revenue"
-msgstr "Kar"
+msgstr "Kazanç"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Cost of Sales"
@@ -24849,11 +24849,11 @@ msgstr "Anımsatıcının her yıl gönderilmesini istiyorsanız işaretleyin."
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Opportunistic Flush"
-msgstr ""
+msgstr "İyimser Boşaltma"
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Cron Flush"
-msgstr ""
+msgstr "Zamanlanmış Boşaltma"
 
 #: CRM/Contact/BAO/GroupNestingCache.php
 msgid "We detected a cycle which we can't handle. aborting"
@@ -24914,7 +24914,7 @@ msgstr "Grup Üyelik İzleme"
 
 #: CRM/Contact/Form/DedupeFind.php
 msgid "No of contacts to find matches for "
-msgstr ""
+msgstr "Eşleştirilecek kişi sayısı"
 
 #: CRM/Contact/Form/Edit/Website.php CRM/Core/BAO/CustomField.php
 #: CRM/Core/BAO/UFGroup.php
@@ -24952,7 +24952,7 @@ msgstr "Tarih Olarak Yaş"
 
 #: CRM/Contact/Form/Search/Custom/Sample.php
 msgid "My Search Title"
-msgstr ""
+msgstr "Arama Başlığım"
 
 #: CRM/Contact/Form/Task/Batch.php CRM/Contact/Form/Task/PickProfile.php
 #: CRM/Contact/Task.php
@@ -24973,19 +24973,19 @@ msgstr[1] "%count ileti gönderildi."
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Print/Merge Document for %1"
-msgstr ""
+msgstr "%s Belgelerini Yazdır/Birleştir"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Document Type"
-msgstr ""
+msgstr "Belge Türü"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Download Document"
-msgstr ""
+msgstr "Belgeyi İndir"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Invalid document file format"
-msgstr ""
+msgstr "Dosya biçimi geçersiz"
 
 #: CRM/Contact/Form/Task/PickProfile.php
 msgid ""
@@ -25009,7 +25009,7 @@ msgstr "Toplu kişi güncelleme için seçilmiş kişi türüne karşı gelen bi
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Disable USPS address validation during import?"
-msgstr ""
+msgstr "Alma sırasında USPS adresi devre dışı bırakılsın"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid ""
@@ -25079,7 +25079,7 @@ msgstr "Posta etiketleri - yazdırma"
 
 #: CRM/Contact/Task.php
 msgid "Print/merge document"
-msgstr ""
+msgstr "Belgeyi Yazdır/Birleştir"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
@@ -25148,7 +25148,7 @@ msgstr "Ödeme Yöntemi"
 
 #: CRM/Core/BAO/UFField.php
 msgid "Contribution Transaction ID"
-msgstr ""
+msgstr "Katkı Hareket Kodu"
 
 #: CRM/Core/Config/MagicMerge.php
 msgid ""
@@ -25226,7 +25226,7 @@ msgstr "Bölge Kodu"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Cache Minutes"
-msgstr ""
+msgstr "Dakika Cinsinden Ön Bellek Süresi "
 
 #: CRM/Core/DAO/Discount.php
 msgid "Discount ID"
@@ -25366,7 +25366,7 @@ msgstr "Oturum açabilsin"
 
 #: CRM/Core/DAO/OptionGroup.php
 msgid "Data Type for this option group"
-msgstr ""
+msgstr "Bu seçenek grubunun veri türü"
 
 #: CRM/Core/DAO/Persistent.php
 msgid "Persistent ID"
@@ -25565,11 +25565,11 @@ msgstr "Çevrimiçi Katkı:"
 
 #: CRM/Core/Permission.php
 msgid "import SQL datasource"
-msgstr ""
+msgstr "alınacak SQL veri kaynağı"
 
 #: CRM/Core/Permission.php
 msgid "When importing, consume data directly from a SQL datasource"
-msgstr ""
+msgstr "Alma sırasında veriler doğrudan bir SQL veri kaynağından alınsın"
 
 #: CRM/Core/Permission.php
 msgid "force merge duplicate contacts"
@@ -25657,23 +25657,23 @@ msgstr "Gün"
 
 #: CRM/Core/SelectValues.php
 msgid "Portable Document Format (.pdf)"
-msgstr ""
+msgstr "Portable Document Format (.pdf)"
 
 #: CRM/Core/SelectValues.php
 msgid "MS Word (.docx)"
-msgstr ""
+msgstr "MS Word (.docx)"
 
 #: CRM/Core/SelectValues.php
 msgid "Open Office (.odt)"
-msgstr ""
+msgstr "Open Office (.odt)"
 
 #: CRM/Core/SelectValues.php
 msgid "Webpage (.html)"
-msgstr ""
+msgstr "Web Sayfası (.html)"
 
 #: CRM/Dashlet/Page/Blog.php
 msgid "Blog"
-msgstr ""
+msgstr "Günlük"
 
 #: CRM/Dedupe/DAO/Exception.php
 msgid "Dedupe Exception ID"
@@ -25697,7 +25697,7 @@ msgstr "Kişiler birleştirildi."
 
 #: CRM/Dedupe/Merger.php
 msgid " Contact(s) were skipped."
-msgstr ""
+msgstr "kişi atlandı."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
@@ -25705,7 +25705,7 @@ msgstr "%1 kodlu kişi %2 kodlu kişi ile birleştirildi ve silindi."
 
 #: CRM/Dedupe/Merger.php
 msgid "Cannot merge because the '%1' contact (ID %2) has been deleted."
-msgstr ""
+msgstr "'%1' kişisi (Kod: %2) silindiğinden aktarılamadı."
 
 #: CRM/Export/Form/Select.php
 msgid "Export Options"
@@ -25812,18 +25812,18 @@ msgid ""
 "This system uses PHP version %1. CiviCRM can be installed on this version, "
 "but some specific features are known to fail or degrade. Version %3 is the "
 "bare minimum to avoid known issues, and version %2 is recommended."
-msgstr ""
+msgstr "Bu sistemde PHP %1 sürümü yüklü. CiviCRM bu sürüm ile çalışabilir ancak bazı özellikler kullanılamaz. Bilinen sorunlarla karşılaşmamak için en az %3 sürümünün normal çalışma için %2 sürümünün kullanılması önerilir."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
 "Future versions of CiviCRM may require the PHP extension \"%2\". To ensure "
 "that your system will be compatible, please install it in advance. For more "
 "explanation, see <a href=\"%1\">the announcement</a>."
-msgstr ""
+msgstr "Gelecek CiviCRM sürümlerinin düzgün çalışabilmesi için PHP \"%2\" eklentisi gerekli olabilir. Sisteminizin uyumluluk gereksinimlerini karşılaması için yüklemeniz önerilir. Ayrıntılı bilgi almak için <a href=\"%1\">duyuruyu okuyun</a>."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Forward Compatibility: Enable \"mysqli\""
-msgstr ""
+msgstr "İleri Dönük Uyumluluk: \"mysqli\" etkinleştirilsin"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Timestamp Mismatch"
@@ -26112,7 +26112,7 @@ msgstr "MyISAM Veritabanı Motoru"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
-msgstr ""
+msgstr "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid ""
@@ -26636,11 +26636,11 @@ msgstr "Belirtilen tarih aralığında her bir ödeme aracı için (Kredi Kartı
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details"
-msgstr ""
+msgstr "Ötelenmiş Kazanç Ayrıntıları"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details Report"
-msgstr ""
+msgstr "Ötelenmiş Kazanç Ayrıntıları Raporu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Textarea"
@@ -26648,7 +26648,7 @@ msgstr "Metin Alanı"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Credit/Contra Revenue Account is"
-msgstr "Kredi/Ters Kar Hesabı"
+msgstr "Kredi/Ters Kazanç Hesabı"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback Account is"
@@ -26656,7 +26656,7 @@ msgstr "Geri Ödeme Hesabı"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Account is"
-msgstr ""
+msgstr "Ötelenmiş Kazanç Hesabı:"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
@@ -26896,11 +26896,11 @@ msgstr "Geçen takvim yılının sonundan beri"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Event Fee"
-msgstr ""
+msgstr "Ötelenmiş Kazanç - Etkinlik Ücreti"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Member Dues"
-msgstr ""
+msgstr "Ötelenmiş Kazanç - Üyelik Bitişleri"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
