po: update po/tr_TR/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/financial.po
+++ b/po/tr_TR/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 02:06+0000\n"
+"PO-Revision-Date: 2016-10-08 04:23+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -944,7 +944,7 @@ msgstr "Ödeme Yöntemi:"
 msgid ""
 "You cannot change the account type since this financial account refers to a "
 "financial item having an account type of Revenue/Liability."
-msgstr ""
+msgstr "Bu mali hesap Kazanç ya da Sorumluluk türünde bir hesaba sahip bir mali öge ile ilişkili olduğundan değiştirilemez."
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -953,7 +953,7 @@ msgid ""
 "administrator set up the deferred revenue account at Administer > "
 "CiviContribute > Financial Accounts, then configure it for financial types "
 "at Administer > CiviContribution > Financial Types, Accounts"
-msgstr ""
+msgstr "Kazanç gerçekleşme tarihi yalnız bir ötelenmiş kazanç hesabı türü ayarlanmış ise belirtilebilir. Lütfen bir yöneticiden Yönetim > CiviContribute > Mali Hesaplar bölümden bir kazanç hesabı oluşturmasını ve ardından Yönetim > CiviContribution > Mali Türler, Hesaplar bölümünden mali tür ayarlarını yapmasını isteyin"
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -961,7 +961,7 @@ msgid ""
 "Please have an administrator set up the deferred revenue account at "
 "Administer > CiviContribute > Financial Accounts, then configure it for "
 "financial types at Administer > CiviContribution > Financial Types, Accounts"
-msgstr ""
+msgstr "Seçilmiş mali tür için bir ötelenmiş kazanç hesabı ayarlanmamış. Lütfen bir yöneticiden Yönetim > CiviContribute > Mali Hesaplar bölümünden bir kazanç hesabını oluşturmasını ve ardından Yönetim > CiviContribution > Mali Türler, Hesaplar bölümünden ayarlamasını isteyin"
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -975,7 +975,7 @@ msgid ""
 "<li>as the financial type for a price set field option with participant count > 0</li>\n"
 "</ul>\n"
 "In other words, please create deferred revenue accounts at Administer > CiviContribute > Financial Accounts, then configure them for the following financial types at Administer > CiviContribute > Financial Types, accounts:"
-msgstr ""
+msgstr "Ötelenmiş kazanç etkinleştirilmeden bir kullanılmakta olan Üyelik ve Etkinlik Mali Türleri ile bir Ötelenmiş Kazanç Hesabı şunları içerecek şekilde ilişkilendirilmelidir\n<ul>\n<li>Yönetim > CiviMember > Üyelik Türleri bölümündeki her üyelik türü için düzenleme</li>\n<li>Etkinlik yönetiminde Ücretler sekmesinde</li>\n<li>Bir üyelik ya da etkinlik fiyat paketi ile ilişkilendirilmiş varsayılan mali tür</li>\n<li>Üyelik türü boş değilken bir üyelik fiyat paketi alanı seçeneği ile ilişkilendirilmiş mali tür</li>\n<li>Katılımcı sayısı >0 olduğunda bir fiyat paketi alanı için mali tür olarak</li>\n<li>Katılımcı sayısı >0 olduğunda bir fiyat paketi alanı seçeneği için mali tür olarak</li>\n</ul>\nDiğer bir deyişle, lütfen Yönetim > CiviContribute > Mali Hesaplar bölümünden ötelenmiş kazanç hesaplarını oluşturun ve bu hesapları Yönetim > CiviContribute > Mali Türler, hesaplar bölümünden şu mali türler için ayarlayın:"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
@@ -995,7 +995,7 @@ msgstr "Mali Türler Erişim Yönetimi"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid "This financial account cannot have '%1' relationship."
-msgstr ""
+msgstr "Bu mali hesap '%1' ilişkisine sahip olamaz."
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
