--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-08 09:21+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -731,7 +731,7 @@ msgstr "Steuerformeln"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Display Settings"
-msgstr ""
+msgstr "Steueranzeigeeinstellungen"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Tax and Invoicing"
@@ -2272,11 +2272,11 @@ msgstr "%1: Über"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
-msgstr ""
+msgstr "%1: Einstellungen (Extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Logs (External)"
-msgstr ""
+msgstr "%1: Protokolle (Extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
@@ -2284,7 +2284,7 @@ msgstr "Logs"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
-msgstr ""
+msgstr "%1: Dokumentation (Extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
@@ -3074,7 +3074,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Address Standardization Provider."
-msgstr ""
+msgstr "Anbieter von standardisierten Adressen"
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Web service user ID."
@@ -3250,11 +3250,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
-msgstr ""
+msgstr "E-Mail-Seite"
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "SMS Screen"
-msgstr ""
+msgstr "SMS-Seite"
 
 #: templates/CRM/Admin/Form/Setting/Component.hlp
 msgid ""
@@ -4419,7 +4419,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Fields to return"
-msgstr ""
+msgstr "Zurückzugebende Felder"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Leave blank for default"
@@ -4940,7 +4940,7 @@ msgstr "CiviCRM enthält 3 vorgegebene Kontaktarten: Individuum, Haushalt, Organ
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid "Contact Type Icon"
-msgstr ""
+msgstr "Kontakttypsymbol"
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid ""
@@ -5416,7 +5416,7 @@ msgstr "WARNUNG: Viele Optionengruppen werden in Programmabläufen verwendet, da
 
 #: templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "none"
-msgstr ""
+msgstr "nichts"
 
 #: templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -5871,7 +5871,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Parameters"
-msgstr ""
+msgstr "Parameter"
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Values"
@@ -6385,7 +6385,7 @@ msgstr "Konfiguriere Eingabe- und Anzeigeformatierung für Datumsfelder."
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "%1 Integration Settings"
-msgstr ""
+msgstr "%1 Integrationseinstellungen"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "%1 version and user table name."
@@ -6461,31 +6461,31 @@ msgstr ""
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Upload Document"
-msgstr ""
+msgstr "Dokument hochladen"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
-msgstr ""
+msgstr "Bitte Dokument hochladen"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
-msgstr ""
+msgstr "Menüeintrag"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Unrestricted"
-msgstr ""
+msgstr "Unbeschränkt"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "After menu element"
-msgstr ""
+msgstr "Nach Menüelement"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Before menu element"
-msgstr ""
+msgstr "Vor Menüelement"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator"
-msgstr ""
+msgstr "Trennzeichen"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Top level"
@@ -6497,7 +6497,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "CKEditor konfigurieren"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Contacts with no preferred language"
@@ -6505,11 +6505,11 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipients language"
-msgstr ""
+msgstr "Empfängersprache"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "System default language"
-msgstr ""
+msgstr "Systemstandardsprache"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Follow recipient preferred language"
@@ -6517,7 +6517,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Communication language"
-msgstr ""
+msgstr "Kommunikationssprache"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "The HTML message is a required field."
@@ -6525,11 +6525,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Language for users"
-msgstr ""
+msgstr "Standardsprache für Benutzer"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use default site language"
-msgstr ""
+msgstr "Standardseitensprache verwenden"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Leave undefined"
@@ -6554,11 +6554,11 @@ msgstr ""
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
-msgstr ""
+msgstr "CKEditor gespeichert"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "%1: Welcome (External)"
-msgstr ""
+msgstr "%1: Willkommen (Extern)"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
@@ -6582,7 +6582,7 @@ msgstr ""
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
-msgstr ""
+msgstr "CiviCRM-Systemstatus"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
@@ -6590,11 +6590,11 @@ msgstr "Verborgen"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden until %1"
-msgstr ""
+msgstr "Ausgeblendet bis %1"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden permanently"
-msgstr ""
+msgstr "Dauerhaft ausgeblendet"
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid ""
@@ -6664,19 +6664,19 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Kalender"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
-msgstr ""
+msgstr "Sondersymbole enthalten:"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency symbol (e.g. '$')"
-msgstr ""
+msgstr "Währungssymbol (z.B. '€')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency ISO code (e.g. 'USD')"
-msgstr ""
+msgstr "Währungs-ISO-Code (z.B. 'EUR')"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "monetary amount, formatted according to selected Monetary Locale"
@@ -6740,7 +6740,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
-msgstr ""
+msgstr "Pfadvariablen"
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 #: templates/CRM/Admin/Form/Setting/Url.hlp
@@ -6824,7 +6824,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Chaining"
-msgstr ""
+msgstr "API-Verkettung"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Chains allow you to execute api calls on the results of this one."
@@ -6893,7 +6893,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
-msgstr ""
+msgstr "Optionale Zusatzfunktionen auswählen"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6913,7 +6913,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
-msgstr ""
+msgstr "Berichtemenü bereinigen"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid ""
