po: update po/hu_HU/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/financial.po
+++ b/po/hu_HU/financial.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-09 20:25+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -995,7 +995,7 @@ msgstr "Pénzügyi típus hozzáférés adminisztrálás"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid "This financial account cannot have '%1' relationship."
-msgstr ""
+msgstr "Ennek a pénzügyi számlának nem lehet '%1' viszonya-"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
@@ -1020,11 +1020,11 @@ msgstr "Egyed pénzügyi számla azonosító"
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Opening Balance"
-msgstr ""
+msgstr "Nyitó mérleg"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Current period opening Balance"
-msgstr ""
+msgstr "Jelenlegi periódus nyitó mérlege"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
@@ -1065,7 +1065,7 @@ msgstr "PHP osztály név implementálás szuffixum"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Current Period Opening Balance"
-msgstr ""
+msgstr "Jelenlegi periódus nyitó mérlege"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
