po: update po/hu_HU/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/member.po
+++ b/po/hu_HU/member.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-09 20:39+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2292,19 +2292,19 @@ msgstr "Ez a tagság automatikusan frissítődik. Módosíthatja vagy törölhet
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and In Progress"
-msgstr ""
+msgstr "Automatikusan megújuló tagság megújítása folyamatban"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Failed"
-msgstr ""
+msgstr "Automatikusan megújuló tagság megújítás sikertelen"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Cancelled"
-msgstr ""
+msgstr "Automatikusan megújuló tagság megújítása törölve"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Ended"
-msgstr ""
+msgstr "Automatikusan megújuló tagság megújítás befejeződött"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
@@ -2316,15 +2316,15 @@ msgstr "Tagsági állapot NINCS felülírva"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew Subscription Status?"
-msgstr ""
+msgstr "Előfizetési állapot automatikusan megújuljon?"
 
 #: CRM/Member/BAO/Query.php
 msgid "- None -"
-msgstr ""
+msgstr "- Egyik sem - "
 
 #: CRM/Member/BAO/Query.php
 msgid "Ended"
-msgstr ""
+msgstr "Befejezve"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
@@ -2415,13 +2415,13 @@ msgstr "Tagok exportálása"
 
 #: CRM/Member/Task.php
 msgid "Print/merge document for memberships"
-msgstr ""
+msgstr "Dokumentum nyomtatás/egybevonás"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "Automatically email a membership confirmation and receipt to %1? OR if the "
 "payment is from a different contact, this email will only go to them."
-msgstr ""
+msgstr "Tagság megerősítő üzenet és nyugta küldése automatikus e-mailben %1 címre? VAGY ha a befizetés másik kapcsolattól érkezett, ez az e-mail csak neki megy el."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -2451,38 +2451,38 @@ msgstr "Egyiket se válassza az összes tagság kijelzéséhez"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Auto-Renew Subscription Status"
-msgstr ""
+msgstr "Előfizetési állapot automatikusan megújítása"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"None\" to display memberships that have never had an auto-renew "
 "subscription."
-msgstr ""
+msgstr "Válassza az - Egyik sem - opciót, az olyan tagságok kijelzésére, amelyek soha nem voltak automatikusan megújulók."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"In Progress\" to display memberships with current auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Válassza a \"Folyamatban\" opciót az olyan tagságok kijelzésére, amelyek jelenleg automatikusan megújulók"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select \"Failed\" to display memberships with failed subscription payment."
-msgstr ""
+msgstr "Válassza  a \"Hibás\" opciót az olyan tagságok kijelzésére, amelyek befizetése sikertelen."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Cancelled\" to display memberships with cancelled auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Válassza a \"Törölve\" opciót az olyan tagságok kijelzésére, amelyek automatikus megújítása törlésre került."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Ended\" to display memberships with an ended auto-renew "
 "subscription."
-msgstr ""
+msgstr "Válassza az \"Befejezve\" opciót, az olyan tagságok kijelzésére, amelyek sikeresem automatikusan megújultak."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Any\" to display memberships with auto-renew subscription "
 "irrespective of their status."
-msgstr ""
+msgstr "Válassza a \"Bármely\" opciót az  összes tagság kijelzésére, függetlenül attól, hogy automatikus megújulók-e vagy sem."
