--- a/po/hu_HU/install.po
+++ b/po/hu_HU/install.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-09 20:20+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -587,21 +587,21 @@ msgstr "Követelmények"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
-msgstr ""
+msgstr "[az ön Backdrop gyökérkönyvtára]"
 
 #: install/index.php
 msgid "This installer can only be used for the Backdrop version of CiviCRM."
-msgstr ""
+msgstr "Ez a telepítő csak a CiviCRM Backdrop változatához használható."
 
 #: install/index.php
 msgid "Oops! Incorrect Backdrop version"
-msgstr ""
+msgstr "Hoppá! Rossz Backdrop változat"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Backdrop 1.x. Please ensure "
 "that '%1' exists if you are running Backdrop 1.0 and over."
-msgstr ""
+msgstr "A CiviCRM ezen változata csak a Backdrop 1.x változataival használható. Kérem győződjön meg arról, hogy a '%1' létezik ha Backdrop 1.0 vagy afeletti változatot használ."
 
 #: install/index.php
 msgid ""
@@ -609,12 +609,12 @@ msgid ""
 " authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Backdrop felhasználói jogosultságok automatikusan beállítva - a névtelen és az ellenőrzött felhasználók részére biztosítva a nyilvános CiviCRM űrlapok és tulajdonságok elérését. Javasoljuk, hogy <a %1>nézze át ezeket a jogosultságokat</a>, hogy azok megfelelnek az önök követelményeinek (<a %2>tudjon meg többet...</a>)"
 
 #: install/template.html
 msgid "Backdrop Database Settings"
-msgstr ""
+msgstr "Backdrop adatbázis beállítások"
 
 #: install/template.html
 msgid "Backdrop Database Details"
-msgstr ""
+msgstr "Backdrop adatbázis részletei"
