--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
+# Geert Buyse <geert.buyse@chiro.be>, 2016
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-09 18:03+0000\n"
+"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2205,7 +2206,7 @@ msgstr "Saldo"
 
 #: CRM/Admin/Form/ScheduleReminders.php CRM/Contribute/Form/Task/PDF.php
 msgid "From Email"
-msgstr ""
+msgstr "E-mailadres afzender"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
@@ -2224,7 +2225,7 @@ msgstr "Aantal termijnen"
 #: CRM/Contribute/Form/Contribution/Confirm.php
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
-msgstr ""
+msgstr "Betaling doen"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
@@ -2298,4 +2299,4 @@ msgstr "Totaal aantal keer geopend"
 #: CRM/Pledge/BAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Next Payment Amount"
-msgstr ""
+msgstr "Bedrag volgende betaling"
