--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -5,6 +5,7 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2013
+# Geert Buyse <geert.buyse@chiro.be>, 2016
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-09 18:01+0000\n"
+"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4988,7 +4989,7 @@ msgstr "Periodieke bijdrage"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid "All recurring contributions"
-msgstr ""
+msgstr "Alle periodieke bijdragen"
 
 #: CRM/Contribute/BAO/ContributionRecur.php CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
@@ -5120,7 +5121,7 @@ msgstr "Er zijn voor deze pagina geen prijsvelden ingesteld of u heeft er geen t
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Confirm Payment"
-msgstr ""
+msgstr "Betaling bevestigen"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
@@ -5320,7 +5321,7 @@ msgstr "NB: Indien de goede betaalmethode hier ontbreekt (bijv. bijdrage in natu
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Pay Now"
-msgstr ""
+msgstr "Nu betalen"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
