--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-10 15:55+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1554,7 +1554,7 @@ msgstr ""
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
-msgstr ""
+msgstr "Inicialitzant..."
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
