po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 13:15+0000\n"
+"PO-Revision-Date: 2016-10-10 23:39+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -25878,7 +25878,7 @@ msgstr "S'ha de configurar per defecte un compte de correu electrònic per al pr
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Learn more in the <a %1>online documentation</a>."
-msgstr ""
+msgstr "Més informació a la <a %1>documentació en línia</a>."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Last cron run at %1."
