--- a/po/hu_HU/common-base.po
+++ b/po/hu_HU/common-base.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-10 12:04+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24850,11 +24850,11 @@ msgstr "Válassza ki, hogy az emlékeztető minden évben kiküldésre kerüljö
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Opportunistic Flush"
-msgstr ""
+msgstr "Opportunistic Flush"
 
 #: CRM/Contact/BAO/GroupContactCache.php
 msgid "Cron Flush"
-msgstr ""
+msgstr "Cron Flush"
 
 #: CRM/Contact/BAO/GroupNestingCache.php
 msgid "We detected a cycle which we can't handle. aborting"
@@ -24915,7 +24915,7 @@ msgstr "Csoport tagság követés"
 
 #: CRM/Contact/Form/DedupeFind.php
 msgid "No of contacts to find matches for "
-msgstr ""
+msgstr "Kapcsolatok száma az egyezés keresésben "
 
 #: CRM/Contact/Form/Edit/Website.php CRM/Core/BAO/CustomField.php
 #: CRM/Core/BAO/UFGroup.php
@@ -24953,7 +24953,7 @@ msgstr "Életkor dátum szerint"
 
 #: CRM/Contact/Form/Search/Custom/Sample.php
 msgid "My Search Title"
-msgstr ""
+msgstr "Keresésem címe"
 
 #: CRM/Contact/Form/Task/Batch.php CRM/Contact/Form/Task/PickProfile.php
 #: CRM/Contact/Task.php
@@ -24974,19 +24974,19 @@ msgstr[1] "%count üzenet sikeresen elküldve."
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Print/Merge Document for %1"
-msgstr ""
+msgstr "Dokumentum nyomtatás/egybevonás %1 részére"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Document Type"
-msgstr ""
+msgstr "Dokumentum típus"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Download Document"
-msgstr ""
+msgstr "Dokumentum letöltése"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Invalid document file format"
-msgstr ""
+msgstr "Érvénytelen dokumentum fájl formátum"
 
 #: CRM/Contact/Form/Task/PickProfile.php
 msgid ""
@@ -25010,7 +25010,7 @@ msgstr "A tömeges kapcsolat frissítésre kiválasztott kapcsolat típusnak nin
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Disable USPS address validation during import?"
-msgstr ""
+msgstr "Kikapcsoljam az USPS cím érvényesség validálást az import során?"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid ""
@@ -25080,7 +25080,7 @@ msgstr "Levél címke - nyomtatás"
 
 #: CRM/Contact/Task.php
 msgid "Print/merge document"
-msgstr ""
+msgstr "Dokumentum nyomtatás/egybevonás"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
@@ -25149,7 +25149,7 @@ msgstr "Fizetés módja"
 
 #: CRM/Core/BAO/UFField.php
 msgid "Contribution Transaction ID"
-msgstr ""
+msgstr "Adomány tranzakció azonosító"
 
 #: CRM/Core/Config/MagicMerge.php
 msgid ""
@@ -25227,7 +25227,7 @@ msgstr "Megye azonosító"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Cache Minutes"
-msgstr ""
+msgstr "Cache percek"
 
 #: CRM/Core/DAO/Discount.php
 msgid "Discount ID"
@@ -25367,7 +25367,7 @@ msgstr "Belépés engedélyezve?"
 
 #: CRM/Core/DAO/OptionGroup.php
 msgid "Data Type for this option group"
-msgstr ""
+msgstr "Ezen opció csoport adat típusa"
 
 #: CRM/Core/DAO/Persistent.php
 msgid "Persistent ID"
@@ -25566,11 +25566,11 @@ msgstr "Online adomány:"
 
 #: CRM/Core/Permission.php
 msgid "import SQL datasource"
-msgstr ""
+msgstr "SQL adatforrás importálása"
 
 #: CRM/Core/Permission.php
 msgid "When importing, consume data directly from a SQL datasource"
-msgstr ""
+msgstr "Amikor közvetlenül SQL adatforrásból importálunk, fogyasztunk adatokat"
 
 #: CRM/Core/Permission.php
 msgid "force merge duplicate contacts"
@@ -25658,23 +25658,23 @@ msgstr "Napok"
 
 #: CRM/Core/SelectValues.php
 msgid "Portable Document Format (.pdf)"
-msgstr ""
+msgstr "Portable Document Format (.pdf)"
 
 #: CRM/Core/SelectValues.php
 msgid "MS Word (.docx)"
-msgstr ""
+msgstr "MS Word (.docx)"
 
 #: CRM/Core/SelectValues.php
 msgid "Open Office (.odt)"
-msgstr ""
+msgstr "Open Office (.odt)"
 
 #: CRM/Core/SelectValues.php
 msgid "Webpage (.html)"
-msgstr ""
+msgstr "Weboldal (.html)"
 
 #: CRM/Dashlet/Page/Blog.php
 msgid "Blog"
-msgstr ""
+msgstr "Blog"
 
 #: CRM/Dedupe/DAO/Exception.php
 msgid "Dedupe Exception ID"
@@ -25698,7 +25698,7 @@ msgstr "Kapcsolat(ok) összefűzve."
 
 #: CRM/Dedupe/Merger.php
 msgid " Contact(s) were skipped."
-msgstr ""
+msgstr "Kapcsolat(ok) kihagyva."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
@@ -25706,7 +25706,7 @@ msgstr "%1 kapcsolat azonosító összevonva %2 kapcsolat azonosítóval és tö
 
 #: CRM/Dedupe/Merger.php
 msgid "Cannot merge because the '%1' contact (ID %2) has been deleted."
-msgstr ""
+msgstr "Nem tudom összefűzni mert a %1 kapcsolat (%2 azonosítójú) azonosító törölve lett."
 
 #: CRM/Export/Form/Select.php
 msgid "Export Options"
@@ -25729,7 +25729,7 @@ msgid ""
 "Count data for smart groups is not currently calculated. You may click "
 "Update Smart Groups to generate it. Be aware this can cause significant "
 "server load"
-msgstr ""
+msgstr "Az okos csoport létszáma nincs kiszámolva. Rákattinthat az okos csoport frissítése gombra, hogy létrehozza. Vegye figyelembe, hogy ez jelentős szerver terhelést okozhat."
 
 #: CRM/Logging/ReportDetail.php
 msgid "Are you sure you want to revert all changes?"
@@ -25749,11 +25749,11 @@ msgstr "Nincs hozzáférési joga ehhez az oldalhoz."
 
 #: CRM/Price/Form/Option.php
 msgid "Pre Option Help"
-msgstr ""
+msgstr "Opció előtti Súgó"
 
 #: CRM/Price/Form/Option.php
 msgid "Post Option Help"
-msgstr ""
+msgstr "Opció utáni Súgó"
 
 #: CRM/Profile/Form/Edit.php
 msgid ""
@@ -25813,18 +25813,18 @@ msgid ""
 "This system uses PHP version %1. CiviCRM can be installed on this version, "
 "but some specific features are known to fail or degrade. Version %3 is the "
 "bare minimum to avoid known issues, and version %2 is recommended."
-msgstr ""
+msgstr "Ez a rendszer %1 PHP változatot használ. CiviCRM telepíthető ezzel a változattal, de néhány speciális tulajdonságról ismert, hogy hibás vagy csökkent. A %3 változat a szükséges minimum, és a %2 változat javasolt."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
 "Future versions of CiviCRM may require the PHP extension \"%2\". To ensure "
 "that your system will be compatible, please install it in advance. For more "
 "explanation, see <a href=\"%1\">the announcement</a>."
-msgstr ""
+msgstr "A CiviCRM későbbi változatai a PHP \"%2\" kiterjesztést követelhetik meg. Azért, hogy biztosítsa a rendszerének kompatibilitását, kérjük előre telepítse. További részletekért, nézze meg a <a href=\"%1\">bejelentést</a>. "
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Forward Compatibility: Enable \"mysqli\""
-msgstr ""
+msgstr "Előre kompatibilitás: \"mysqli\" engedélyezése"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Timestamp Mismatch"
@@ -26113,7 +26113,7 @@ msgstr "MyISAM adatabázis motor"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
-msgstr ""
+msgstr "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid ""
@@ -26123,7 +26123,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "</tbody></table></p>"
-msgstr ""
+msgstr "</tbody></table></p>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
@@ -26190,7 +26190,7 @@ msgstr ""
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: CRM/Utils/ReCAPTCHA.php
 msgid "Please go back and complete the CAPTCHA at the bottom of this form."
