--- a/po/hu_HU/common-components.po
+++ b/po/hu_HU/common-components.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-10 09:03+0000\n"
+"Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2201,15 +2201,15 @@ msgstr "Egyenleg"
 
 #: CRM/Admin/Form/ScheduleReminders.php CRM/Contribute/Form/Task/PDF.php
 msgid "From Email"
-msgstr ""
+msgstr "Feladó"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
-msgstr ""
+msgstr "Növekvő"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Descending"
-msgstr ""
+msgstr "Csökkenő"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2220,7 +2220,7 @@ msgstr "Részletek száma"
 #: CRM/Contribute/Form/Contribution/Confirm.php
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
-msgstr ""
+msgstr "Befizetés megtétele"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
@@ -2234,7 +2234,7 @@ msgstr "Nincs meg az összes hozzáférési joga ehhez az oldalhoz."
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Show Recurring Donation Start Date?"
-msgstr ""
+msgstr "Mutassam az ismétlődő adomány kezdőnapját?"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
@@ -2294,4 +2294,4 @@ msgstr "Összes megnyitás"
 #: CRM/Pledge/BAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Next Payment Amount"
-msgstr ""
+msgstr "Következő befizetés összege"
