--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-10 12:35+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,11 +45,11 @@ msgstr "Anteckning om deltagaren"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Status Id"
-msgstr "Deltagarstatus"
+msgstr "Deltagarstatus-ID"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Role Id"
-msgstr "Deltagarroll"
+msgstr "Deltagarroll-ID"
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
@@ -355,11 +355,11 @@ msgstr ""
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
-msgstr "Deltagarstatus"
+msgstr "Deltagarstatus-ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Role ID"
-msgstr "Deltagarroll"
+msgstr "Deltagarroll-ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Register date"
