po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 11:00+0000\n"
+"PO-Revision-Date: 2016-10-10 11:15+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -16202,7 +16202,7 @@ msgstr ""
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Den här smarta gruppens medlemmar kommer att uppdaterats automatiskt för att innehålla alla kontakter som matchar sökkriterierna."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
@@ -17192,7 +17192,7 @@ msgstr "Ange ett namn och en beskrivning för den sparade sökningen"
 
 #: templates/CRM/Contact/Page/View/ContactSmartGroup.tpl
 msgid "This contact does not currently belong to any smart groups."
-msgstr ""
+msgstr "Den här kontakten är inte medlem i någon smart grupp just nu."
 
 #: templates/CRM/Contact/Page/View/ContactSmartGroup.tpl
 msgid ""
@@ -18651,7 +18651,7 @@ msgstr "En del organisationer finner det praktiskt att koppla ihop organisations
 msgid ""
 "Update this page with current statistics on the number of contacts in each "
 "smart group."
-msgstr ""
+msgstr "Uppdatera denna sida för att få aktuell statistik över antalet kontakter i varje smart grupp."
 
 #: templates/CRM/Group/Page/Group.hlp
 msgid "CiviMail component"
@@ -25076,7 +25076,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - update smart group"
-msgstr ""
+msgstr "Grupp - uppdatera smart grupp"
 
 #: CRM/Contact/Task.php
 msgid "Mailing labels - print"
@@ -25733,7 +25733,7 @@ msgid ""
 "Count data for smart groups is not currently calculated. You may click "
 "Update Smart Groups to generate it. Be aware this can cause significant "
 "server load"
-msgstr ""
+msgstr "Antalet i smarta grupper har inte beräknats. Du kan klicka på <strong>Uppdatera smarta grupper</strong> för att göra det. Det kan generera betydande last på din server."
 
 #: CRM/Logging/ReportDetail.php
 msgid "Are you sure you want to revert all changes?"
@@ -26322,7 +26322,7 @@ msgid ""
 "If you've changed search criteria for this 'smart group' and want to save "
 "your changes, select <strong>Group - update smart group</strong> from the '-"
 " more actions -' drop-down menu"
-msgstr ""
+msgstr "Om du har ändra sökkriterierna för denna smarta grupp och vill spara ändringarna kan du välja <strong>Grupp - uppdatera smart grupp</strong> från menyn ' - fler åtgärder - '."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
