po: update po/hu_HU/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/financial.po
+++ b/po/hu_HU/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-09 20:25+0000\n"
+"PO-Revision-Date: 2016-10-10 09:01+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -944,7 +944,7 @@ msgstr "Fizetés módja:"
 msgid ""
 "You cannot change the account type since this financial account refers to a "
 "financial item having an account type of Revenue/Liability."
-msgstr ""
+msgstr "Nem változtathatja meg ezt számla típust, mert ez a pénzügyi számla hivatkozik egy olyan péntügyi típusra, melynek számla típusa Bevétel/Kötelezettség."
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -953,7 +953,7 @@ msgid ""
 "administrator set up the deferred revenue account at Administer > "
 "CiviContribute > Financial Accounts, then configure it for financial types "
 "at Administer > CiviContribution > Financial Types, Accounts"
-msgstr ""
+msgstr "A bevétel elismerési dátuma csak akkor megadható, ha a kiválasztott pénzügyi típusa egy beállított halasztott bevételi számla. Kérje meg az adminisztrátort készítsen halasztott bevételi számlát az Adminisztrálás>CiviAdomány>Pénzügyi számlák, majd utánna állítsa be a pénzügyi típusokat az Adminisztrálás>CiviAdomány>Pénzügyi típusok alatt."
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -961,7 +961,7 @@ msgid ""
 "Please have an administrator set up the deferred revenue account at "
 "Administer > CiviContribute > Financial Accounts, then configure it for "
 "financial types at Administer > CiviContribution > Financial Types, Accounts"
-msgstr ""
+msgstr "A kiválasztott pénzügyi típushoz nincs beállítva halasztott bevételi számla. Kérje meg az adminisztrátort készítsen halasztott bevételi számlát az Adminisztrálás>CiviAdomány>Pénzügyi számlák, majd utánna állítsa be a pénzügyi típusokat az Adminisztrálás>CiviAdomány>Pénzügyi típusok alatt."
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -975,7 +975,7 @@ msgid ""
 "<li>as the financial type for a price set field option with participant count > 0</li>\n"
 "</ul>\n"
 "In other words, please create deferred revenue accounts at Administer > CiviContribute > Financial Accounts, then configure them for the following financial types at Administer > CiviContribute > Financial Types, accounts:"
-msgstr ""
+msgstr "Mielőtt a halasztott bevételi számlát engedélyezné, a halasztott bevételi számla viszonyt meg kell határozni az összes Tagság és Esemény esetében használatban lévő pénzügyi típusra, beleértve <ul>\n<li> amit az Adminisztrál>CiviTag>Tagság típusok alatt az egyes tagság típusra, szerkeszt</li>\n<li>az események kezelése alatt, ár fülön beállítható<li>\n<li>a tagság és esemény árlistákhoz kapcsolódó alapértelmezett pénzügyi típusokat</li>\n<li>tagság árlista készlet pénzügyi típus mező opcióját, amikor tagság típus nem üres </li>\n<li>esemény árlista készlet mező pénzügyi típusát, ahol a résztvevők száma > 0</li>\n<li>az árlista készlet mező pénzügyi típus opcióját, ahol a résztvevők száma  > 0</li>\n</ul>\nMás szóval, készítsen halasztott bevételi számlát az Adminisztrálás>CiviAdomány>Pénzügyi számlák, majd utánna állítsa be a pénzügyi típusokat az Adminisztrálás>CiviAdomány>Pénzügyi típusok alatt:"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
