--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-10 12:31+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1669,7 +1669,7 @@ msgstr "CiviEvent"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Participant Statuses"
-msgstr "Deltagarstatus"
+msgstr "Flera deltagarstatus"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
