po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 23:39+0000\n"
+"PO-Revision-Date: 2016-10-11 08:00+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -11840,11 +11840,11 @@ msgstr "Aquest perfil no té activat la funció de mapa "
 #: CRM/Profile/Page/MultipleRecordFieldsListing.php
 #: templates/CRM/UF/Page/ProfileTemplates.tpl
 msgid "Copy"
-msgstr ""
+msgstr "Còpia"
 
 #: CRM/Profile/Page/MultipleRecordFieldsListing.php
 msgid "Copy %1"
-msgstr ""
+msgstr "Còpia %1"
 
 #: CRM/Profile/Page/Router.php
 msgid "Create Profile"
@@ -26162,31 +26162,31 @@ msgstr ""
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
-msgstr ""
+msgstr "Estat del sistema: Emergència"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Alert"
-msgstr ""
+msgstr "Estat del sistema: Alerta"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Critical"
-msgstr ""
+msgstr "Estat del sistema: Crític"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Error"
-msgstr ""
+msgstr "Estat del sistema: Error"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Warning"
-msgstr ""
+msgstr "Estat del sistema: Advertència"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Notice"
-msgstr ""
+msgstr "Estat del sistema: Nota"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Ok"
-msgstr ""
+msgstr "Estat del sistema: OK"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Yearly (Fiscal)"
@@ -26252,7 +26252,7 @@ msgstr ""
 
 #: js/model/crm.uf.js
 msgid "(Copy)"
-msgstr ""
+msgstr "(Còpia)"
 
 #: templates/CRM/ACL/Header.tpl
 msgid ""
@@ -26620,7 +26620,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Click-Through Report"
-msgstr ""
+msgstr "Informe de registre de clics de correu electrònic"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
