--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-11 07:48+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5300,7 +5300,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed"
-msgstr ""
+msgstr "# Completats"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg"
