--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 15:58+0000\n"
+"PO-Revision-Date: 2016-10-11 14:14+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -3313,11 +3313,11 @@ msgstr ""
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "List counted participants"
-msgstr ""
+msgstr "Llitat de participants comptats"
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "List uncounted participants"
-msgstr ""
+msgstr "Llistat de participants no comptats"
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Show large map"
