po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-13 12:06+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4262,7 +4262,7 @@ msgstr "Cette page permet de définir les URL d'accès aux ressources de CiviCRM
 #: templates/CRM/Admin/Form/Setting/versionCheckOptions.js
 msgid ""
 "This will suppress notifications about all currently available updates."
-msgstr ""
+msgstr "Cette action entraînera la suppression des notifications à propos de toutes les mises à jour disponibles actuellement."
 
 #: templates/CRM/Admin/Form/Setting/versionCheckOptions.js
 msgid "Notifications will resume when a new security advisory is published."
