po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-11 11:00+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-14 16:17+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2146,7 +2146,7 @@ msgstr "Elimina el tipus de relació"
 
 #: CRM/Admin/Page/ScheduleReminders.php
 msgid "Edit Schedule Reminders"
-msgstr ""
+msgstr "Editar els recordatoris programats"
 
 #: CRM/Admin/Page/ScheduleReminders.php
 msgid "Enable Label Format"
@@ -2158,7 +2158,7 @@ msgstr ""
 
 #: CRM/Admin/Page/ScheduleReminders.php
 msgid "Delete Schedule Reminders"
-msgstr ""
+msgstr "Eliminar els recordatoris programats"
 
 #: CRM/Admin/Page/Setting.php
 msgid "Global Settings"
@@ -2932,11 +2932,11 @@ msgstr "Direcció completa (p. ex. 110 Main Street)."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "Supplemental address 1 (line is skipped if empty)."
-msgstr "Direcció addicional 1 (s'omet la línia si està buida). "
+msgstr "Adreça adicional 1 (s'ignora la línia si està buida). "
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "Supplemental address 2 (line is skipped if empty)."
-msgstr "Direcció Addicional 2 (s'omet la línia si està buida)."
+msgstr "Adreça adicional 2 (s'ignora la línia si està buida)."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "City."
@@ -6237,7 +6237,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "No Scheduled Reminders have been created."
-msgstr ""
+msgstr "No s'han creat recordatoris programats."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
