po: update po/ca_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-11 14:14+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-10-14 17:30+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -663,11 +663,11 @@ msgstr "Inscriure múltiples participants?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Same email address?"
-msgstr ""
+msgstr "Mateixa adreça de correu electrònic?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Duplicate matching rule"
-msgstr ""
+msgstr "Regla de coincidència per a duplicats"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Require participant approval?"
@@ -2020,7 +2020,7 @@ msgstr ""
 msgid ""
 "When this Event is active, create links to the Event Information page by "
 "copying and pasting the following URL:"
-msgstr "Quan aquest esdeveniment és actiu, creeu enllaços a la pàgina d'Informació de l'esdeveniment copiant i enganxant la següent URL:"
+msgstr "Quan aquest esdeveniment estigui actiu, creeu enllaços a la pàgina d'informació de l'esdeveniment copiant i enganxant la següent URL:"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid ""
@@ -2046,7 +2046,7 @@ msgstr "Seleccioneu la moneda a utilitzar per la inscripció a aquest esdevenime
 msgid ""
 "If this is a paid event and you want users to be able to register and pay "
 "online, select a payment processor to use."
-msgstr ""
+msgstr "Si aquest es un esdeveniment de pagament i es vol que els usuaris puguin inscriure's en línia s'ha de seleccionar un processador de pagament."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2075,7 +2075,7 @@ msgid ""
 "they register online. If using a price set below note that the contribution "
 "record will have this financial type, however line items will be processed "
 "using the actual financial type selected for the price set item."
-msgstr ""
+msgstr "Aquest tipus de finançament s'assignarà als pagaments realitzats pels participants quan s'inscriguin en línia. Si s'està utilitzant una tarifa de sota, s'ha de tenir en compte que el registre de la contribució tindrà aquest tipus de finançament, no obstant els ítems seran processats pel tipus de finançament real seleccionat en la seva tarifa."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2117,7 +2117,7 @@ msgstr ""
 msgid ""
 "Check this box if you want to offer discounted fees based on registration "
 "date (e.g. 'early-registration discounts')."
-msgstr ""
+msgstr "Seleccionar aquesta opció si desitjeu oferir descomptes en funció de la data d'inscripció (per exemple, 'descomptes per inscripció anticipada)."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "another discount set"
@@ -2158,13 +2158,13 @@ msgstr "Utilitzeu aquest formulari per configurar la localització i la informac
 msgid ""
 "Uncheck this box if you want to HIDE the event Address on Event Information "
 "and Registration pages as well as on email confirmations."
-msgstr ""
+msgstr "Desmarcar aquest camp si es vol ocultar l'adreça en la informació del esdeveniment i les pàgines d'inscripció, així com en els correus electrònics de confirmació."
 
 #: templates/CRM/Event/Form/ManageEvent/Location.tpl
 msgid ""
 "This location is used by %1 other events. Modifying location information "
 "will change values for all events."
-msgstr ""
+msgstr "Aquesta ubicació és utilitzada per %1 esdeveniments més. Modificant informació de la ubicació, aquesta s'actualitzarà en la resta d'esdeveniments."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2318,7 +2318,7 @@ msgstr "elimina el perfil"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "add another profile (bottom of page)"
-msgstr ""
+msgstr "afegir un altre perfil (al final de la pàgina)"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
@@ -2330,17 +2330,17 @@ msgstr "Canvieu això si voleu utilitzar un perfil diferent per participants add
 msgid ""
 "Include additional fields on this registration form by selecting and "
 "configuring a CiviCRM Profile to be included at the bottom of the page."
-msgstr ""
+msgstr "Incloure camps adicionals al formulari d'inscripció configurant i seleccionant perfils de CiviCRM que s'inclouran al final de la pàgina."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
 "If you want to provide an Online Registration page for this event, check the"
 " first box below and then complete the fields on this form."
-msgstr ""
+msgstr "Si voleu habilitar el registre en línia per aquest esdeveniment, marqueu la casella i completeu el formulari."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Online registration enabled?"
-msgstr ""
+msgstr "Registre en línia habilitat?"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Registration Screen"
@@ -2361,7 +2361,7 @@ msgid ""
 "Include additional fields on this registration form by selecting and "
 "configuring a CiviCRM Profile to be included at the top of the page "
 "(immediately after the introductory message)."
-msgstr ""
+msgstr "Incloure camps adicionals al formulari d'inscripció configurant i seleccionant perfils de CiviCRM que s'inclouran al principi de la pàgina (després del missatge introductori)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Confirmation Screen"
@@ -2391,17 +2391,17 @@ msgstr "Pantalla d'agraïment"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Page title for registration Thank-you screen."
-msgstr ""
+msgstr "Títol de la pàgina d'agraïment per la inscripció."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Optional message for Thank-you screen (may include HTML formatting)."
-msgstr ""
+msgstr "Missatge opcional per la pàgina d'agraïment (es pot incloure format HTML)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
 "Optional footer text for Thank-you screen (often used to include links to "
 "other pages/activities on your site)."
-msgstr ""
+msgstr "Peu de pàgina opcional per la pàgina d'agraïment (es pot incloure enllaços a d'altres pàgines/activitats del lloc)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Confirmation Email"
@@ -2412,7 +2412,7 @@ msgid ""
 "Do you want a registration confirmation email sent automatically to the "
 "user? This email includes event date(s), location and contact information. "
 "For paid events, this email is also a receipt for their payment."
-msgstr ""
+msgstr "Voleu enviar un correu electrònic automàtic de comfirmació al usuari? Aquest correu electrònic inclou la data(es) de l'esdeveniment, ubicació i informació de contacte. Per esdeveniments de pagament, el correu electrònic també inclou un rebut del pagament."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Additional message or instructions to include in confirmation email."
@@ -2564,11 +2564,11 @@ msgstr "Registra un participant"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 msgid "Online Registration (Test-drive)"
-msgstr ""
+msgstr "Registre en línia (test)"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 msgid "Online Registration (Live)"
-msgstr ""
+msgstr "Registre en línia (en viu)"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 #: templates/CRM/Event/Page/EventInfo.tpl
