po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 12:35+0000\n"
+"PO-Revision-Date: 2016-10-14 09:12+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2927,7 +2927,7 @@ msgid ""
 "Update field values for each participant as needed. To set a field to the "
 "same value for ALL rows, enter that value for the first participation and "
 "then click the <strong>Copy icon</strong> (next to the column title)."
-msgstr ""
+msgstr "Ändra fältvärden enligt din önskemål. För att sätta ett fält till samma värde för ALLA rader, mata in värdet på första raden och klicka på <strong>kopieringsikonen</strong> (bredvid kolumnrubriken)."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
@@ -3800,7 +3800,7 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr ""
+msgstr "Deltagare vars status ändras FRÅN \"Väntar på inbetalning\" TILL \"Registrerade\" eller \"Deltog\" kommer att automatiskt få ett bekräftelsemail och deras betalningsstatus kommer att ändras till \"Klar\". Om detta inte är det du vill göra kan du ändra deras deltagarstatus genom att redigera anmälningsposten direkt."
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
