po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 10:55+0000\n"
+"PO-Revision-Date: 2016-10-14 09:25+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -4624,7 +4624,7 @@ msgstr "plus-tecken"
 msgid ""
 "Administer your CiviCRM site using the links on this page. Click %1 for "
 "descriptions of the options in each section."
-msgstr "Administrera din CiviCRM-installation via länkarna på denna sida. Klicka %1 för en beskrivning av alternativen i varje sektion."
+msgstr "Administrera din CiviCRM-installation via länkarna på denna sida. Klicka på %1 för en utförligare beskrivning av alternativen i varje sektion."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Edit settings"
