po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 16:14+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-10-16 22:07+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11305,7 +11305,7 @@ msgstr "Camp preu"
 #: CRM/Price/DAO/PriceFieldValue.php templates/CRM/Group/Form/Search.tpl
 #: CRM/Upgrade/Snapshot/V4p2/Price/DAO/FieldValue.php
 msgid "Count"
-msgstr "Compta"
+msgstr "Comptador"
 
 #: CRM/Price/DAO/PriceFieldValue.php
 #: CRM/Upgrade/Snapshot/V4p2/Price/DAO/FieldValue.php
@@ -16202,7 +16202,7 @@ msgstr "El cos de l'SMS excedeix el límit de 160 caràcters"
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Aquest grup intel·ligent quedarà actualitzat amb els contactes que compleixin els criteris de cerca."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
@@ -26529,7 +26529,7 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Showing %1 to %2 of %3 entries"
-msgstr ""
+msgstr "Mostrant %1 de %2 de %3 entrades"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "(filtered from %1 total entries)"
@@ -26537,7 +26537,7 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Show %1 entries"
-msgstr ""
+msgstr "Mostra %1 entrades"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
